--- a/finite.tex
+++ b/finite.tex
@@ -113,7 +113,7 @@ A \index{sheaf!simplicial}quasicoherent (and Cartesian~\cite[Tag 09VK]{stacks-pr
 which shows that any descent datum (including those not arising, a priori, from a pullback) can be naturally extended to a full quasicoherent sheaf on \(\mathcal D_f\).
 \end{remark}
 
-The following Theorem is the culmination of a typical first investigation of descent:\footnote{For details and additional context, see Vistoli~\cite[Section 4.2.1]{Vistoli}.  The story in the context of Hopf algebroids is also spelled out in detail by Miller~\cite{MillerSheavesGradings}.}
+The following Theorem is the culmination of a first investigation of descent:\footnote{For details and additional context, see Vistoli~\cite[Section 4.2.1]{Vistoli}.  The story in the context of Hopf algebroids is also spelled out in detail by Miller~\cite{MillerSheavesGradings}.}
 
 \begin{theorem}[{Faithfully flat descent, \cite[Expos\'e VIII]{GrothendieckSGAI}}]\label{OriginalFFDescent}
 If \(f\co R \to S\) is \index{descent!faithfully flat}faithfully flat, the natural assignments
@@ -165,8 +165,8 @@ The \index{descent!object}\textit{descent object} for \(X\) along \(\eta\co \S \
 \right\}.\]
 \end{definition}
 
-\begin{lemma}[{\cite[Theorem 4.4.2.8.ii]{LurieHA}}]
-If \(E\) is an \(A_\infty\)--ring spectrum, then \(\mathcal D_E(X)\) can be considered as a cosimplicial object in the \(\infty\)--category of \(\CatOf{Spectra}\). \qed
+\begin{lemma}[{\cite[Theorem 4.4.2.8]{LurieHA}}]
+For \(E\) an \(A_\infty\)--ring spectrum, \(\mathcal D_E(X)\) can be considered as a cosimplicial object in the \(\infty\)--category of \(\CatOf{Spectra}\). \qed
 \end{lemma}
 
 \begin{definition}\label{DefnOfNilpCompletionAndASS}
@@ -184,7 +184,7 @@ An even-periodic ring spectrum \(E\) satisfies \index{commutativity hypothesis@c
 \end{definition}
 
 \begin{definition}[\textbf Flatness \textbf Hypothesis]
-An even-periodic ring spectrum \(E\) satisfies \index{flatness hypothesis@flatness hypothesis, \FH}{\FH} when the right-unit map \(E_0 \to E_0 E\) is flat.\footnote{If \(E\) is a commutative ring spectrum, then this is equivalent to asking that the left-unit map is a flat map of \(E_0\)--modules.}  In this case, the Segal map \[(E_0 E)^{\otimes_{E_0} j} \otimes_{E_0} E_0 X \to \pi_0(E^{\sm (j+1)} \sm X) = \pi_0 \mathcal D_E(X)[j]\] is an isomorphism for all \(X\).  In geometric language, this says that \(\context{E}\) is valued in simplicial sets equivalent to nerves of groupoids and that \[\context{E}(X) := \widetilde{\pi_0 \mathcal D_E(X)}\] forms a Cartesian quasicoherent sheaf over \(\context{E}\).  In this sense, we have constructed a factorization
+An even-periodic ring spectrum \(E\) satisfies \index{flatness hypothesis@flatness hypothesis, \FH}{\FH} when the right-unit map \(E_0 \to E_0 E\) is flat.  In this case, the Segal map \[(E_0 E)^{\otimes_{E_0} j} \otimes_{E_0} E_0 X \to \pi_0(E^{\sm (j+1)} \sm X) = \pi_0 \mathcal D_E(X)[j]\] is an isomorphism for all \(X\).  In geometric language, this says that \(\context{E}\) is valued in simplicial sets equivalent to nerves of groupoids and that \[\context{E}(X) := \widetilde{\pi_0 \mathcal D_E(X)}\] forms a Cartesian quasicoherent sheaf over \(\context{E}\).  In this sense, we have constructed a factorization
 \begin{center}
 \begin{tikzcd}[row sep=1.2em]
 \CatOf{Spectra} \arrow["E_0(-)"]{rr} \arrow["\context{E}(-)"']{rd} & & \CatOf{Modules}_{E_0} \\
@@ -223,7 +223,7 @@ The homological algebra of Hopf algebras from \Cref{HopfAlgebraLecture} can be l
 \end{proof}
 
 \begin{remark}[{cf.\ \Cref{HurewiczImageOnZeroLine}}]\label{HurewiczRemark}
-The sphere spectrum fails to satisfy {\CH}, so the above results do not apply to it, but the \(\S\)--Adams spectral sequence is particularly degenerate: it consists of \(\pi_* X\), concentrated on the \(0\)--line.  For any other ring spectrum \(E\), the unit map \(\S \to E\) induces a map of Adams spectral sequences whose image on the \(0\)--line are those maps of comodules induced by applying \(E\)--homology to a homotopy element of \(X\)---i.e., the \index{Hurewicz homomorphism}Hurewicz image of \(E\).
+The sphere spectrum fails to satisfy {\CH}, so the above results do not apply, but the \(\S\)--Adams spectral sequence is particularly degenerate: it consists of \(\pi_* X\), concentrated on the \(0\)--line.  For any other ring spectrum \(E\), the unit map \(\S \to E\) induces a map of Adams spectral sequences whose image on the \(0\)--line are those maps of comodules induced by applying \(E\)--homology to a homotopy element of \(X\)---i.e., the \index{Hurewicz homomorphism}Hurewicz image of \(E\).
 \end{remark}
 
 \begin{remark}\label{WarningAboutStacks}
