--- a/mo.tex
+++ b/mo.tex
@@ -481,7 +481,7 @@ In summary, the formula \(\RP^\infty_{\HFtwo P} \cong \G_a\) embodies the extrem
 
 \section{Hopf algebra cohomology}\label{HopfAlgebraLecture}
 
-In this section, we will focus on an important classical tool: the \index{Adams spectral sequence}Adams spectral sequence.  We are going to study this in greater earnest later on, so we will avoid giving a satisfying construction in this Lecture.  Still, even without a construction, it is instructive to see how this comes about from a moral perspective.
+In this section, we will focus on an important classical tool: the \index{Adams spectral sequence}Adams spectral sequence.  We are going to study this in greater earnest later on, so we will avoid giving a satisfying construction in this Lecture.  Still, even without a construction, it is instructive to see how this comes about from a moral perspective.  Because we intend to use the Adams spectral sequence to perform computations, in this Lecture we prefer to work with graded homology and cohomology.
 
 Begin by considering the following three self-maps of the stable sphere:
 \begin{center}
