--- a/sigma.tex
+++ b/sigma.tex
@@ -710,9 +710,9 @@ The topological input to the \(5\)--lemma also gave us a purely algebraic result
 \textbf{Convention: We will write \(H\) for \(\HFp\) for the duration of the lecture.}
 \end{center}
 
-Motivated by our success at analyzing the schemes \(\Spec (E_\Gamma)_0 BU[6, \infty)\) associated to \(BU[6, \infty)\) through Morava \(E\)--theory, we move on to considering the scheme constructed via ordinary homology.  As usual, we expect this to be harder: the formal group associated to ordinary homology is not \(p\)--divisible, and this causes many sequences which are short exact from the perspective of Morava \(E\)--theory to go awry.  Instead, we will have to examine the problem more directly---luckily, the extremely polite formal group law associated to \(\G_a\) makes computations accessible.  We also expect the reward to be greater: as in \Cref{HopfRingForEBP}, we will be able to use a successful analysis of the ordinary homology scheme to give a description of the complex-orientable homology schemes, no matter what complex-orientable homology theory we use.
+Motivated by our success at analyzing the schemes \(\Spec (E_\Gamma)_0 BU[6, \infty)\) associated to \(BU[6, \infty)\) through Morava \(E\)--theory, we move on to considering the scheme constructed via ordinary homology.  As usual, we expect this to be harder: the formal group associated to ordinary homology is not \(p\)--divisible, and this causes many sequences which are short exact from the perspective of Morava \(E\)--theory to go awry.  Instead, we will have to examine the problem more directly---luckily, the extremely polite formal group law associated to \(\G_a\) and the strong effects of the grading together make computations accessible.  We also expect the reward to be greater: as in \Cref{HopfRingForEBP}, we will be able to use a successful analysis of the ordinary homology scheme to give a description of the complex-orientable homology schemes, no matter what complex-orientable homology theory we use.
 
-As in the \(p\)--divisible case, our framework comes in the form of a map of sequences
+As in the \(p\)--divisible case, our framework is a map of sequences
 \begin{center}
 \begin{tikzcd}
 \Spec H_* B\SU \arrow{r} \arrow{d} & \Spec H_* BU[6, \infty) \arrow{r} \arrow{d} & \text{``\(\Spec H_* \OS{H\Z}{3}\)''} \arrow{d} \\
