make modifications to Nat's section

--- a/powerops.tex
+++ b/powerops.tex
@@ -49,7 +49,7 @@ In \Cref{QuillenPowerOpnsSection} we introduced an \(H_\infty\)--ring structure 
 An orientation \(MU[6, \infty) \to E_\Gamma\) is \(H_\infty\) if and only if the induced cubical structure is \index{norm!coherence}``norm-coherent'' (cf.\ \Cref{NormCoherentDefn}). \qed
 \end{theorem}
 
-\noindent Before addressing this, we discuss in \Cref{CharacterTheorySection} an important phenomenon: after deleting certain forms of torsion, the Morava \(E_\Gamma\)--homology of a finite spectrum can be well--approximated by its Morava \(E_{\Gamma'}\)--homology where \(\Gamma'\) satisfies \(\height{\Gamma'} < \height{\Gamma}\).  This is interesting in its own right, and we will quickly see that the precise form of the approximation bears directly on the study of power operations.
+\noindent Before addressing this, we discuss in \Cref{CharacterTheorySection} an important phenomenon: after deleting certain forms of torsion, the Morava \(E_\Gamma\)--homology of a finite spectrum can be well--approximated by its Morava \(E_{\Gamma'}\)--homology where \(\Gamma'\) satisfies \(\height{\Gamma'} < \height{\Gamma}\).  This is interesting in its own right, and we will see that the approximation bears directly on the study of power operations.
 
 Secondly, with the homotopy category exposed, we turn to \(E_\infty\)--ring spectra themselves: we give a summary of the known results about \(E_\infty\) orientations in \Cref{JuvitopTalkSection}, but in \Cref{ConstructionOfTMFSection} we first introduce the spectrum \(\TMF\), which is the primary target of the \(\String\)--orientation.
 
@@ -67,7 +67,7 @@ Secondly, with the homotopy category exposed, we turn to \(E_\infty\)--ring spec
 
 \section{Rational chromatic phenomena (Nathaniel Stapleton)}\label{CharacterTheorySection}
 
-Before embarking on the rather ambitious project of understanding the collection of \(H_\infty\)--ring maps \(\phi\co MU[6, \infty) \to E_\Gamma\), it would be instructive to be able to answer the following: if we had such an orientation, would data could we extract from it?  The main feature of such a map is that it belongs to a commutative diagram
+Before embarking on the ambitious project of understanding the collection of \(H_\infty\)--ring maps \(\phi\co MU[6, \infty) \to E_\Gamma\), it would be instructive to be able to answer the following: if we had such an orientation, would data could we extract from it?  The main feature of such a map is that it belongs to a commutative diagram
 \begin{center}
 \begin{tikzcd}
 MU[6, \infty)^0(X) \arrow["\phi"]{r} \arrow["P^{\Sigma_n}_{MU[6, \infty)}(X)"]{d} & E^0(X) \arrow["P^{\Sigma_n}_E(X)"]{d} \\
