--- a/characters.tex
+++ b/characters.tex
@@ -62,10 +62,7 @@ This follows from the fact that \(\Q \otimes E^*\) is a flat \(E^*\)-algebra. Wh
 \[
 \Q \otimes E^*(BA)
 \]
-is free as a \(\Q \otimes E^*\)-module of rank \(p^{k_1d + \ldots + k_id}\). However, \[H(\Q \otimes E^0)P^*(BA) \cong \Q \otimes E^*\] is free of rank \(1\).  This is essentially a consequence of Machke's theorem: using the facts that the order of \(A\) is invertible in \(\Q \otimes E^0\) and that the action of \(A\) is trivial, we have isomorphisms
-\begin{align*}
-\pi_*((H(\Q \otimes E^0)P)^{BA}) &\cong \pi_*((H(\Q \otimes E^0)P)^{hA}) \\ &\cong (\pi_*(H(\Q \otimes E^0)P))^A \\ &\cong \pi_*(H(\Q \otimes E^0)P).
-\end{align*}
+is free as a \(\Q \otimes E^*\)-module of rank \(p^{k_1d + \ldots + k_id}\). However, \[H(\Q \otimes E^0)P^*(BA) \cong \Q \otimes E^*\] is free of rank \(1\), a direct consequence of Machke's theorem.
 
 To explain one of the inputs into the main theorem of this Lecture, we need one more notion. For \(G\) a finite group, a \(G\)--CW complex \(X\) is a \(G\)--space built inductively by attaching ``cells'' of the form \((G/H) \times D^n\), as in the following pushout diagram:
 \begin{center}
@@ -76,7 +73,7 @@ X^{(n-1)} \arrow{r} & X^{(n)}.
 \end{center}
 We say that a \(G\)--CW complex is finite if it can be built out of finitely many cells of the form \(G/H \times D^n\).
 
-\begin{theorem}[{Equivariant CW Approximation, \cite[Chapter I.1]{MayAlaskaNotes}}] \label{app:CWapprox}
+\begin{theorem}[{Equivariant CW Approximation, \cite[Theorem I.3.6]{MayAlaskaNotes}}] \label{app:CWapprox}
 Every \(G\)--space is weakly equivalent to a \(G\)--CW complex. \qed
 \end{theorem}
 
@@ -90,7 +87,7 @@ X_{hG} \simeq EG \times_G X = (EG \times X)/G
 \]
 is the homotopy orbits for the \(G\)-action on \(X\). The resulting equivariant cohomology theory is called \textit{Borel equivariant \(E\)--theory}.
 
-The purpose of this Case Study is to explain, in the case of \(E = E_{\Gamma}\), how to extend the above formula \[\Q \otimes E^*(X) \cong H(\Q \otimes E^0)P^*(X),\] originally stated for finite complexes \(X\), to an analogous formula for finite \(G\)--CW complexes. Said another way, for each finite group, we want to approximate Borel equivariant \(E\)--cohomology (restricted to finite \(G\)--CW complexes) by some version of Borel equivariant rational cohomology. We call this ``the approximation problem".  In particular, this links back up to our original goal of studying \(E^*(B\Sigma_n)\) by the formula \[E^*(B\Sigma_n) = E_{\Sigma_n}^*((G/G) \times *).\]
+The purpose of this Case Study is to explain, in the case of \(E = E_{\Gamma}\), how to extend the above formula \[\Q \otimes E^*(X) \cong H(\Q \otimes E^0)P^*(X),\] originally stated for finite complexes \(X\), to an analogous formula for finite \(G\)--CW complexes. Said another way, for each finite group, we want to approximate Borel equivariant \(E\)--cohomology (restricted to finite \(G\)--CW complexes) by some version of Borel equivariant rational cohomology. We call this ``the approximation problem".  In particular, this encompasses our original goal of understanding \(E^*(B\Sigma_n)\), as it appears as a special case of Borel equivariant cohomology as in the formula \[E^*(B\Sigma_n) = E_{\Sigma_n}^*((G/G) \times *).\]
 
 \subsection*{Formal Geometry}
 
@@ -169,9 +166,10 @@ There is a surprisingly simple answer to the approximation problem in this case.
 \Lambda^* \cong (\Q/\Z_{(p)})^d \cong (S^1[p^{\infty}])^d
 \] 
 as well as canonical isomorphisms
-\[
-\Lambda^*[p^k] \cong (\Lambda_{k})^* \cong \CatOf{Groups}(\Lambda_k, C_{p^k}).
-\]
+\begin{align*}
+\Lambda^* & \cong (S^1[p^{\infty}])^d, &
+\Lambda^*[p^k] & \cong (\Lambda_{k})^* \cong \CatOf{Groups}(\Lambda_k, C_{p^k}).
+\end{align*}
 %Let \(\Lk = (C_{p^k}^{\times d})^*\) so that there are canonical isomorphisms
 %\[
 %\Lk^* \cong (S^1)^{\times d}[p^k] = C_{p^k}^{\times d}.
@@ -189,7 +187,7 @@ and
 \Spec(R) \times_{\Spec(E^0)} \InternalHom{FormalGroups}(A^*, \G[p^k]) & \cong \InternalHom{FormalGroups}(A^*, \Lambda_{k}^*) \\
 & \cong A^{\times d}.
 \end{align*}
-That is, we would be able to give the simplest answer imaginable: we will have approximated \(E^0(BA)\) by the \(HRP\)-cohomology of a collection of points. The purpose of the next section is to construct a \(\Q \otimes E^0\)-algebra \(C_0\) with this property.
+That is, we would be able to give the simplest answer imaginable: we will have approximated \(E^0(BA)\) by the \(HRP\)-cohomology of a collection of points. In next section we construct a \(\Q \otimes E^0\)-algebra \(C_0\) with this property.
 
 
 %Let \(\Lk = (\Z/p^k)^n\) so that there are canonical isomorphisms
@@ -372,7 +370,7 @@ Let us work out \(C_0\) in the case of $p$-complete $K$-theory \(E_{\G_m} = KU_p
 \[
 \G = \G_m,
 \]
-the formal multiplicative group over \(\Z_p\).  Because \(\G_m\) is the formal completion of the multiplicative group scheme \(\mathbb G_m\), we have
+the formal multiplicative group over \(\Z_p\).  Because \(\G_m\) is the formal completion of the multiplicative group scheme \(\mathbb G_m\) and the base ring is \(p\)--complete, we have
 \[
 \G_m[p^k] \cong \mathbb{G}_m[p^k].
 \]
@@ -651,7 +649,7 @@ The idea is simply that \(U(m)\) acts transitively on \(\Flag(V)\) and the stabi
 
 
 \begin{proposition}[{\cite[Proposition 2.4(2)]{HKR}}] \label{finitefreeflags}
-Let \(X\) be a space and let \(\Flag(V) \rightarrow X\) be the bundle of complete flags of a complex vector bundle \(V\) over \(X\), then \(E^*(\Flag(V))\) is a finitely-generated free \(E^*(X)\)--module. \pushQED\qed \qedhere \popQED
+Let \(X\) be a space and let \(\Flag(V) \rightarrow X\) be the bundle of complete flags of a complex vector bundle \(V\) over \(X\).  For \(E\) complex-oriented, \(E^*(\Flag(V))\) is a finitely-generated free \(E^*(X)\)--module. \pushQED\qed \qedhere \popQED
 \end{proposition}
 
 Since \(f \colon V \rightarrow X\) is an \(m\)--dimensional complex vector bundle, it follows (cf.\ \Cref{DefnAssociatedBundle}) that \(EG \times V \rightarrow EG \times X\) is an \(m\)--dimensional complex vector bundle (this is the external product with a \(0\)--dimensional complex vector bundle). Since \(G\) acts freely on \(EG \times X\), the quotient \(EG \times_G V \rightarrow EG \times_G X\) is also an \(m\)--dimensional complex vector bundle.
@@ -692,10 +690,11 @@ and applying \(E^*(-)\) to the simplicial space
 \cdots
 \end{tikzcd}
 \right\}\]
-produces the descent object for the canonical map \(E^*(X) \rightarrow E^*(\Flag(V))\). Since a finitely-generated free extension is faithfully flat, \Cref{finitefreeflags} implies that
+produces the descent object for the canonical map \(E^*(X) \rightarrow E^*(\Flag(V))\). Since a finitely-generated free extension is faithfully flat, \Cref{finitefreeflags} gives a sufficient condition so that
 \begin{equation*}
 E^*(X) \cong \ker \big (E^*(\Flag(V)) \rightarrow E^*(\Flag(V) \times_X \Flag(V)) \big ).
 \end{equation*}
+When this holds, we say that \(E\) satisfies \textit{complex oriented descent}.
 
 Since it suffices to take the trivial bundle over \(X\) in these constructions, we can now recover \(E^*(X)\) in a functorial way from \(E^*(\Flag(V))\) and from \(E^*(\Flag(V) \times_X \Flag(V))\).
 
