reorder adjectives to decrease ambiguity

--- a/finite.tex
+++ b/finite.tex
@@ -782,7 +782,7 @@ where we have required an \emph{equality} of formal group laws over the common p
 
 The main result about \((\moduli{fg})^\wedge_\Gamma\) is due to Lubin and Tate:
 \begin{theorem}[{Lubin--Tate theorem, \cite[Theorem 3.1]{LubinTate}}]\label{LubinTateModuliThm}
-Suppose that \(\height \Gamma < \infty\) for \(\Gamma\) a formal group over \(k\) a perfect field of positive characteristic \(p\).  The functor \((\moduli{fg})^\wedge_\Gamma\) is valued in essentially discrete groupoids, and it is naturally equivalent to a smooth formal scheme over \(\W_p(k)\) of dimension \((\height(\Gamma) - 1)\).
+Suppose that \(\height \Gamma < \infty\) for \(\Gamma\) a formal group over \(k\) a perfect field of positive characteristic \(p\).  The functor \((\moduli{fg})^\wedge_\Gamma\) is valued in essentially discrete groupoids, and it is naturally equivalent to a smooth formal scheme of dimension \((\height(\Gamma) - 1)\) over \(\W_p(k)\).
 \end{theorem}
 
 \begin{remark}[{\cite[Theorem 4.35]{ZinkCartierTheory}}]\label{UnivPropertyOfWittRing}
