add hint about MO-module claim

--- a/mo.tex
+++ b/mo.tex
@@ -105,6 +105,7 @@ T(\mu \circ (J_{\R} \times J_{\R})) & \simeq T(\mu \circ (J_{\R} \times J_{\R}) 
 T(J_{\R}) \sm T(J_{\R}) & \simeq T(J_{\R}) \sm \Susp^\infty_+ BO \tag{monoidality} \\
 MO \sm MO & \simeq MO \sm \Susp^\infty_+ BO. \tag{definition of \(MO\)}
 \end{align*}
+In order to verify that this equivalence is one of \(MO\)--modules, one performs an analogous computation with \(J_{\R}^{\times 3}\).
 \end{proof}
 
 \noindent From here, the general version of Thom's theorem follows quickly:
