change H-equivariant to G'-equivariant

--- a/quillen.tex
+++ b/quillen.tex
@@ -695,7 +695,7 @@ We now return to the setting of a general \(H_\infty\)--ring spectrum \(E\).  So
 \end{center}
 This construction is useful when studying composites of power operations: the group \(\Sigma_k \wr \Sigma_n \subseteq \Sigma_{nk}\) acts naturally on \((E^{\sm k})^{\sm n} \simeq E^{\sm nk}\), and indeed there is an equivalence \[P^{\Sigma_n} \circ P^{\Sigma_k} = P^{\Sigma_k \wr \Sigma_n}.\]  In order to understand these modified power operations more generally, we are motivated to study such maps \(\phi\) more seriously.  Some basic constructions are summarized in the following definition:
 \begin{definition}[{\cite[Sections XI.3 and XXV.3]{MayAlaskaNotes}, cf.\ also \cite[Section 6.1.6]{LurieHA}}]
-Let \(\phi\co G \to H\) be an inclusion of finite groups and let \(F\) be an \(H\)--spectrum.  There is a natural map of homotopy colimits \(\phi_*\co F_{hG} \to F_{hH}\) which induces a \index{restriction}\textit{restriction map} on cohomology: \[\Res_G^H\co E^0 F_{hH} \to E^0 F_{hG}.\]  The spectrum \(\bigvee_{H/G} F\) considered as a \(H\)--spectrum with the diagonal \(H\)--action has the property \((\bigvee_{H/G} F)_{hH} = F_{hG}\), and the \(H\)--equivariant averaging map \[F \xrightarrow{\bigvee_{H/G} \operatorname{id}} \bigvee_{H/G} F\] passes on homotopy orbits to the \index{norm!equivariant}\textit{additive norm map} \(N_G^H\co F_{hH} \to F_{hG}\), which again induces a map on cohomology classes \[\Tr_G^H\co E^0 F_{hG} \to E^0 F_{hH}\] called the \textit{transfer map}.  The composite \(\phi_* \circ N_G^H\) acts by multiplication by the index \(|H/G|\), and hence this is also true of \(\Res^H_G \Tr^H_G\).
+Let \(\phi\co G \to G'\) be an inclusion of finite groups and let \(F\) be an \(G'\)--spectrum.  There is a natural map of homotopy colimits \(\phi_*\co F_{hG} \to F_{hG'}\) which induces a \index{restriction}\textit{restriction map} on cohomology: \[\Res_G^{G'}\co E^0 F_{hG'} \to E^0 F_{hG}.\]  The spectrum \(\bigvee_{G'/G} F\) considered as a \(G'\)--spectrum with the diagonal \(G'\)--action has the property \((\bigvee_{G'/G} F)_{hG'} = F_{hG}\), and the \(G'\)--equivariant averaging map \[F \xrightarrow{\bigvee_{G'/G} \operatorname{id}} \bigvee_{G'/G} F\] passes on homotopy orbits to the \index{norm!equivariant}\textit{additive norm map} \(N_G^{G'}\co F_{hG'} \to F_{hG}\), which again induces a map on cohomology classes \[\Tr_G^{G'}\co E^0 F_{hG} \to E^0 F_{hG'}\] called the \textit{transfer map}.  The composite \(\phi_* \circ N_G^{G'}\) acts by multiplication by the index \(|G'/G|\), and hence this is also true of \(\Res^{G'}_G \Tr^H_G\).
 \end{definition}
 
 The restriction and transfer maps appear prominently in the following formula, which measures the failure of the power operation construction to be additive:
@@ -709,16 +709,16 @@ P^{\Sigma_n}(f + g) = \sum_{i + j = n} \Tr_{\Sigma_i \times \Sigma_j}^{\Sigma_n}
 \noindent To produce binomial formulas for the modified power operations, we use the following Lemma:
 
 \begin{lemma}[{\cite[p.\ 109-110]{AdamsInfiniteLoopSpaces}, \cite[Section 6.5]{HKR}}]
-Let \(G_1, G_2\) be subgroups of \(H\), and consider the homotopy pullback diagram
+Let \(G_1, G_2\) be subgroups of \(G'\), and consider the homotopy pullback diagram
 \begin{center}
 \begin{tikzcd}
 P \arrow{r} \arrow{d} \arrow[dr, phantom, "\lrcorner", very near start] & * \mmod G_1 \arrow{d} \\
-* \mmod G_2 \arrow{r} & * \mmod H.
+* \mmod G_2 \arrow{r} & * \mmod G'.
 \end{tikzcd}
 \end{center}
-For any identification \(P \simeq \coprod_K (* \mmod K)\),\footnote{This decomposition in terms of subgroups of \(H\) is \emph{not} canonical.} there is a \index{push-pull}push-pull interchange formula
+For any identification \(P \simeq \coprod_K (* \mmod K)\),\footnote{This decomposition in terms of subgroups of \(G'\) is \emph{not} canonical.} there is a \index{push-pull}push-pull interchange formula
 \[\pushQED{\qed}
-\Res_{G_1}^H \Tr_{G_2}^H = \sum_K \Tr^{G_1}_K \Res_K^{G_2}. \qedhere
+\Res_{G_1}^{G'} \Tr_{G_2}^{G'} = \sum_K \Tr^{G_1}_K \Res_K^{G_2}. \qedhere
 \popQED\]
 \end{lemma}
 
